# BigGold

./: CMakeLists.txt  main.cpp  server.cpp  server.h
BigMacDAO/: bigmacdao.cpp  bigmacdao.h
PythonManager/: pythonmanager.h
Resources/: BigMac.py
Server/: server.cpp  server.h
